[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl"
version = "0.1.0"
description = "AutoML experiments and tools"
readme = "README.md"
requires-python = ">=3.11, <4.0"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
